@@ -1,11 +1,15 @@
 <script lang="ts">
+    import type { PluginInfo } from '$types/state';
     import { Switch } from '$shared/ui/switch';
     import state from '$shared/net/bareState.svelte';
-    import type { PluginInfo } from '$types/state';
     import Port from '$shared/net/port.svelte';
     import DeleteOutline from 'svelte-material-icons/DeleteOutline.svelte';
     import Web from 'svelte-material-icons/Web.svelte';
     import GithubIcon from '$assets/github-mark-white.svg';
+    import Xml from 'svelte-material-icons/Xml.svelte';
+    import { version } from "../../package.json";
+    import { parseScriptHeaders } from '$shared/parseHeader';
+    import { Toaster, toast } from 'svelte-5-french-toast';
 
     function onToggle(plugin: PluginInfo) {
         Port.send("pluginToggled", { name: plugin.name, enabled: plugin.enabled });
@@ -27,15 +31,40 @@
 
     function openSite() { chrome.tabs.create({ url: "https://gimloader.github.io" }) }
     function openRepo() { chrome.tabs.create({ url: "https://github.com/Gimloader/Gimloader" })}
+    function copyDebugInfo() {
+        const plugins = state.plugins
+            .toSorted((a, b) => a.name.localeCompare(b.name))
+            .toSorted((a, b) => a.enabled === b.enabled ? 0 : a.enabled ? -1 : 1);
+        const libraries = state.libraries
+            .toSorted((a, b) => a.name.localeCompare(b.name));
+        
+        let debugInfo = `**Core:**\nGimloader v${version}`;
+        debugInfo += `\n\n**Plugins:**\n` + plugins.map((plugin) => {
+            const headers = parseScriptHeaders(plugin.script);
+            return `- ${plugin.name} v${headers.version || "unknown"} [${plugin.enabled ? "enabled" : "disabled"}]`;
+        }).join("\n");
+        debugInfo += `\n\n**Libraries:**\n` + libraries.map((library) => {
+            const headers = parseScriptHeaders(library.script);
+            return `- ${library.name} v${headers.version || "unknown"}`;
+        }).join("\n");
+
+        navigator.clipboard.writeText(debugInfo)
+            .then(() => toast.success("Debug info copied to clipboard"))
+            .catch(() => toast.error("Failed to copy debug info to clipboard"));
+    }
 </script>
 
-<!-- svelte-ignore a11y_click_events_have_key_events a11y_no_static_element_interactions -->
-<div class="w-full h-full preflight bg-slate-900 text-white" onclick={() => deleting = null}>
+<svelte:window onclick={() => deleting = null} />
+
+<Toaster position="bottom-right" toastOptions={{ duration: 5000 }} />
+
+<div class="w-full h-full bg-slate-900 text-white">
     <div class="flex items-center gap-2 px-1 border-b">
         <img src="./images/icon128.png" alt="The Gimloader icon" class="w-6 h-6" />
         <h1 class="whitespace-nowrap text-2xl font-bold grow">Gimloader</h1>
-        <button onclick={openSite} title="Open official site"><Web width={24} height={24} /></button>
+        <button onclick={openSite} title="Open official site"><Web size={24} /></button>
         <button onclick={openRepo} title="Open github repo">{@html GithubIcon}</button>
+        <button onclick={copyDebugInfo} title="Copy debug info"><Xml size={24} /></button>
     </div>
     <div class="max-h-[500px] overflow-y-auto w-full py-1">
         {#if state.plugins.length === 0}
