@@ -1,3 +1,7 @@
 @import "tailwindcss" source(".");
 @import "../shared/vars";
 @source "../shared/ui";
+
+button {
+    @apply cursor-pointer;
+}
