@@ -2,3 +2,4 @@ Fixed updates tab looking strange
 Fixed modals for certain plugins looking strange
 Added notingame option for reloadRequired header
 Removed syncEval header
+Added button to copy debug information in popup
